# vault-watcher

./: .gitignore  Cargo.toml  Dockerfile  README.md  _accounts.json  _config.json  docker-compose.yaml
dash-templates/: panel.json.template
grafana/: home.json
grafana/provisioning/datasources/: main.yaml
src/: db.rs  lib.rs  main.rs  utils.rs
