[package]
name = "vault-watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.10.6"
solana-sdk = "1.9.5"
serde_json = "1.0"
serde = "1.0"
tokio = "1.17"
spl-token = "3.2"
dotenv = "0.15.0"
reqwest = "0.11.10"
clap = "3.1.8"
tokio-postgres = {version = "0.7.5", features = ["with-chrono-0_4"]}
chrono = "0.4.19"
sysinfo = "0.23.8"
futures = "0.3.21"
itertools = "0.10.3"
